[gd_scene load_steps=5 format=3 uid="uid://b11a3ucpk0m1d"]

[ext_resource type="Script" uid="uid://c8s0wbkpkhxjh" path="res://addons/gdautobuilder/scene/gd_autobuilder_panel.gd" id="1_xmehe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmehe"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.16862746, 0.16862746, 0.16862746, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l23yv"]
bg_color = Color(0.14901961, 0.14901961, 0.14901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cawwg"]
bg_color = Color(0, 0, 0, 1)

[node name="GdAutobuilderPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmehe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xmehe")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer9" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3
text = "使用站点"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Website" type="LineEdit" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer9/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_l23yv")
text = "https://github.com/godotengine/godot"

[node name="DownloadSourceCodeBtn" type="Button" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer9/HBoxContainer"]
layout_mode = 2
text = "拉取源码"

[node name="DownloadSourceCodeRequest" type="HTTPRequest" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer9"]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "源码路径(存储路径)"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SourceCodeEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_l23yv")
text = "D:/Godot/源码/godot-4.5.1-stable/godot-4.5.1-stable"

[node name="SelectSourceCodeBtn" type="Button" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_l23yv")
text = "选择"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "build文件路径"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuildEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_l23yv")
text = "D:/Godot/Project/gd-auto-builder/test.gdbuild"

[node name="SelectBuildBtn" type="Button" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_l23yv")
text = "选择"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "目标平台"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlatformOption" type="OptionButton" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 8
popup/item_0/text = "Windows"
popup/item_0/id = 0
popup/item_1/text = "Linux"
popup/item_1/id = 1
popup/item_2/text = "Web"
popup/item_2/id = 2
popup/item_3/text = "iOS"
popup/item_3/id = 3
popup/item_4/text = "Android_ARM_32"
popup/item_4/id = 4
popup/item_5/text = "Android_ARM_64"
popup/item_5/id = 5
popup/item_6/text = "MacOS_X86_64"
popup/item_6/id = 6
popup/item_7/text = "MacOS_ARM_64"
popup/item_7/id = 7

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = "优化"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptimizeOption" type="OptionButton" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 2
item_count = 3
popup/item_0/text = "DISABLED"
popup/item_0/id = 0
popup/item_1/text = "SIZE"
popup/item_1/id = 1
popup/item_2/text = "SIZE_EXTRA"
popup/item_2/id = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "使用线程"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UseThreadCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "启用"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "LTO"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UseLtoCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "启用"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "调试"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UseDebugCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer6/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "启用"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RunBtn" type="Button" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_l23yv")
text = "运行构建"

[node name="OpenOutput" type="Button" parent="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_l23yv")
text = "打开输出目录"

[node name="Source" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a Directory"
initial_position = 1
file_mode = 2
access = 2

[node name="Build" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
initial_position = 1
file_mode = 0
access = 2
filters = PackedStringArray("*.build", "*.gdbuild")

[node name="BuildMessageWindow" type="Window" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
initial_position = 1
size = Vector2i(500, 100)
visible = false
wrap_controls = true
exclusive = true
always_on_top = true

[node name="PanelContainer" type="PanelContainer" parent="BuildMessageWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cawwg")

[node name="ScrollContainer" type="ScrollContainer" parent="BuildMessageWindow/PanelContainer"]
layout_mode = 2

[node name="buildMessage" type="Label" parent="BuildMessageWindow/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer9/HBoxContainer/Website" to="." method="_on_website_text_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer9/HBoxContainer/DownloadSourceCodeBtn" to="." method="_on_download_source_code_btn_pressed"]
[connection signal="request_completed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer9/DownloadSourceCodeRequest" to="." method="_on_download_source_code_request_request_completed"]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/SourceCodeEdit" to="." method="_on_source_code_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/SelectSourceCodeBtn" to="." method="_on_select_source_code_btn_pressed"]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2/HBoxContainer/BuildEdit" to="." method="_on_build_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2/HBoxContainer/SelectBuildBtn" to="." method="_on_select_build_btn_pressed"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer/PlatformOption" to="." method="_on_platform_option_item_selected"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer7/HBoxContainer/OptimizeOption" to="." method="_on_optimize_option_item_selected"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer/UseThreadCheckBox" to="." method="_on_use_thread_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer5/HBoxContainer/UseLtoCheckBox" to="." method="_on_use_lto_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer6/HBoxContainer/UseDebugCheckBox" to="." method="_on_use_debug_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer8/RunBtn" to="." method="_on_run_btn_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer8/OpenOutput" to="." method="_on_open_output_pressed"]
[connection signal="dir_selected" from="Source" to="." method="_on_source_dir_selected"]
[connection signal="file_selected" from="Build" to="." method="_on_build_file_selected"]
[connection signal="close_requested" from="BuildMessageWindow" to="." method="_on_build_message_window_close_requested"]
